Minor documentation updates
This commit includes a bunch of minor documentation updates, as well
.gitignore changes.

--- a/case/README
+++ b/case/README
@@ -5,7 +5,7 @@
 The icetube.svg file is a slightly modified version of the Adafruit
 Ice Tube Clock v1.1 case to accommodate the xmas-icetube board.
 
-The modification can be viewed and modified in Inkscape:
+This modification can be viewed and modified in Inkscape:
 
   http://inkscape.org/
 
