--- a/board/README
+++ b/board/README
@@ -14,15 +14,9 @@ which may be purchased or downloaded from CadSoft:
     http://www.cadsoftusa.com/
 
 
-The current board (Rev. C) may be ordered directly from OSH Park:
-
-  http://oshpark.com/shared_projects/cANRY9hF
-  http://oshpark.com/shared_projects/PiRXWH3F
-
-Please note that although the Rev. C board seems to work well, voltage
-across the IV-18 filament is too low.  Even so, voltage across the
-filament is still better than in the original Adafruit design.  See
-the following posts for more information:
+The current board (Rev. D) is *untested*, so use this design at your
+own risk.  Rev. C includes an enhancement to the filament driver
+circuit to increase voltage to within specifications.
 
   http://forums.adafruit.com/viewtopic.php?p=223798#p223798
   http://forums.adafruit.com/viewtopic.php?p=223793#p223793
