New low battery warning
After ten minutes the system voltage has fallen to whatever is being
supplied by the battery.  At that time, the microcontroller checks the
system voltage.  If the system voltage has fallen below a prespecified
threshold (config.h), the clock will display a low battery warning
message upon waking ("bad batt").

--- a/README
+++ b/README
@@ -43,6 +43,7 @@ original Adafruit design:
   - highly accurate temperature compensated timekeeping
   - no beeping or time loss after external power failure
   - 25-fold improvement in battery life
+  - low battery warning before battery failure
   - per-digit brightness adjustment for uneven displays
   - automatic brightness control by ambient light
   - optionally disable display during specified time periods
