Updated documentation, changed defaults
The USAGE describes more details in setting the time, date, and
miscellaneous format options in the configuration menus.

The README file now describes how to use the new "verify" targets in
the Makefile.

The option under "cfg regn"/"cfg dst" for Western European Time is now
called "WET" instead of "GMT", because strictly speaking, GMT does not
include daylight saving time.

The automatic dimmer and GPS support compile-time options do not cause
problems if they are enabled without the corresponding hardware mods,
so these options are now enabled by default in config.h.

Several of the menu-configurable option defaults are different as
well.  The default automatic brightness is now from level 0 to
level 8 instead of level 0 to level 10.  The number nine is now
displayed with segment D (the lowermost segment) by default.  The
default font displays most letters as capitals by default which seems
more readable by most people.  Finally, the default alarm is now the
three beep pulse which (to me) sounds more like a typical alarm clock.

--- a/firmware/README
+++ b/firmware/README
@@ -139,6 +139,22 @@ the included Makefile:
         % make install-eeprom
         % make install-lock
 
+(5) Verify Successful Programming (Optional)
+
+    To ensure that the chip has been successfully programmed, one
+    may check the chip data against what should have been installed
+    in the previous step:
+
+        % make verify-all
+
+    One may also verify the individual sections of programmed memory.
+    The following commands are equivalent to "make verify-all":
+
+        % make verify-fuse
+        % make verify-flash
+        % make verify-eeprom
+        % make verify-lock
+
 
 #####################
 ## USING THE CLOCK ##
@@ -159,6 +175,7 @@ optional feature in detail.
 
 :: Automatic Display Dimming ::
 http://forums.adafruit.com/viewtopic.php?f=41&t=12932
+http://forums.adafruit.com/viewtopic.php?p=219736#p219736
 
 :: Temperature Compensated Timekeeping ::
 http://forums.adafruit.com/viewtopic.php?f=41&t=14941
