Minor documentation updates in code and docs
The documentation incorporates loads of minor revisions--almost
exclusively typographical and grammatical corrections and revisions.

In the code, the tunable parameters for low battery detection are now
documented with comments and have been moved from system.c to
system.h.

--- a/README
+++ b/README
@@ -4,7 +4,7 @@ The firmware README is now located in the firmware directory:
 
 
 ########################
-## xmas-icetube Clock ##
+## XMAS-ICETUBE CLOCK ##
 ########################
 
 The xmas-icetube clock is a revision of the Adafruit Ice Tube Clock v1.1,
@@ -18,6 +18,41 @@ xmas-icetube firmware on the Adafruit Ice Tube Clock v1.1, the default
 firmware configuration is set for the Adafruit clock with no hardware
 modifications.  See the README file in the firmware directory for more
 information on how to configure the xmas-icetube firmware.
+
+
+####################################
+## XMAS-ICETUBE USER ENDORCEMENTS ##
+####################################
+
+Below is a collection of comments from Adafruit forum users:
+
+"Every mod works beautifully...  The code truly is clever...
+[John's] code is so clean that it's easy to add things."
+    --rcb
+    http://forums.adafruit.com/viewtopic.php?p=244224#p244224
+
+"This firmware is really cool. I highly recommend anyone with an
+ATmega328p lying around to program it with this firmware and use
+it instead of the one that comes with the kit."
+
+    --motocoder
+    http://forums.adafruit.com/viewtopic.php?p=243916#p243916
+
+"[John] has done a lot of nice work and added a lot of features.
+I can recommend his firmware as an upgrade..."
+    --adafruit_support_bill,
+      http://forums.adafruit.com/viewtopic.php?p=211476#p211476
+
+"Also, may I just say that I LOVE your firmware, and for about 2
+weeks I was still finding new options and features in the menu."
+    --wildtang3nt
+      http://forums.adafruit.com/viewtopic.php?p=204665#p204665
+
+"+10 for John's firmware!  Please do not let the 'xmas' name sway
+you from giving it a try. It's the most feature complete Ice-Tube
+Clock firmware to date."
+    --revnull
+    http://forums.adafruit.com/viewtopic.php?p=180609#p180609
 
 
 ##############
