--- a/firmware/README
+++ b/firmware/README
@@ -15,12 +15,11 @@ became a feature-rich reimplementation of the original Adafruit firmware.
 ## FEATURES ##
 ##############
 
-That this firmware works with *both* the Adafruit Ice Tube Clock v1.1 and
-xmas-icetube hardware revision.
-
-Many of the features in the xmas-icetube firmware were first implemented in
-other firmware projects; see the CREDITS file for details.  This firmware
-boasts the following improvements over the official Adafruit firmware.
+This firmware works with the Adafruit Ice Tube Clock v1.1 as well as the
+xmas-icetube hardware revision.  Many of the features in the xmas-icetube
+firmware were first implemented in other firmware projects; see the CREDITS
+file for details.  This firmware boasts the following improvements over the
+official Adafruit firmware:
 
   - animated display transitions
   - multiple time and date formats
@@ -47,8 +46,8 @@ boasts the following improvements over the official Adafruit firmware.
   - IV-18 VFD tube driven to specifications*
 
 *  These hacks require hardware modification and support must be enabled by
-   uncommenting macros in config.h.  See the HACKS AND MODS section of
-   this file as well as the comments in config.h for more information.
+   uncommenting macros in config.h.  See the HACKS AND MODS section of this
+   file as well as the comments in config.h for more information.
 
 
 For Ice Tube Clock hackers, this firmware has
@@ -66,12 +65,16 @@ For Ice Tube Clock hackers, this firmware has
 Installation requires GNU Make, avr-libc, avr-gcc, and avrdude; the
 instructions below presume proficiency with these tools.
 
-This firmware requires the ATMEGA328P:  not the ATMEGA168V included
-with the Ice Tube Clock kit.  Due to the many features, this firmware
-currently requires ~25 kb of flash, but the ATMEGA168V only has 16 kb.
-Also, if your ATMEGA328P has an Arduino bootloader installed, it will
-not work without reconfiguration.  See the TROUBLESHOOTING section for
-reconfiguration instructions.
+This firmware requires the ATMEGA328P, not the ATMEGA168V included with
+the Adafruit kit.  Due to the many features, xmas-icetube currently
+requires 20-30 kb of program memory, but the ATMEGA168V only has 16 kb.
+The ATMEGA328P also supports picoPower features that are used to extend
+battery life by 4-fold on the Adafruit clock--and 25-fold with a minor
+hardware modification.  The ATMEGA168V does not support picoPower.
+
+Note that if your ATMEGA328P has an Arduino bootloader installed, it
+will not work without reconfiguration.  See the TROUBLESHOOTING section
+for reconfiguration instructions.
 
 To program the chip, any avrdude-compatible ISP programmer should work,
 but programming has been tested with the Adafruit USBtinyISP, the Atmel
@@ -80,27 +83,27 @@ AVR Dragon, and an Arduino programed with the ArduinoISP sketch.
 Compilation and installation has been tested under
 
     (a) Ubuntu Linux 12.04 with the avr-gcc and avrdude packages,
-    (b) Mac OS 10.6 with MacPorts' avr-gcc and avrdude packages, and
+    (b) Mac OS 10.9 with MacPorts' avr-gcc and avrdude packages, and
     (c) Windows 7 with WinAVR and Cygwin's perl and bash packages.
 
 To compile and install this firmware, first configure compile-time
-options by editing config.h; then, build and install the project using
-the included Makefile:
+options by editing config.h.  Then, build and install the project
+using the included Makefile:
 
 (1) Edit the Configuration Variables
 
-    First, review the macro definitions in config.h, changing macro
-    definitions as needed to enable support for various hardware hacks.
-    The default values in config.h are suitable for the Adafruit Ice Tube
-    Clock v1.1 without any hardware mods or hacks.  For the xmas-icetube
-    clock, it may be more convenient to copy the config.h file from the
-    hardware directory and edit that as desired:
+    First, review the macro definitions in config.h, changing definitions
+    as needed to enable support for various hardware hacks.  The default
+    values in config.h are suitable for the Adafruit Ice Tube Clock v1.1
+    and includes support for the autodimmer and GPS mods.  For the
+    xmas-icetube clock, it may be more convenient to copy the config.h file
+    from the hardware directory and edit that as desired:
 
 	% cp ../hardware/config.h config.h
 
-    Next, review the Makefile to ensure that configuration variables
-    are reasonable given your hardware.  In particular, AVRISP and
-    AVRDUDEOPT seem most likely to require attention.
+    Next, review the Makefile to ensure that configuration variables are
+    reasonable given your hardware.  In particular, AVRISP and AVRDUDEOPT
+    seem most likely to require attention.
 
 (2) Compile the Firmware
 
@@ -114,8 +117,8 @@ the included Makefile:
 
     Ensure the clock has an ATMEGA328P installed and not an ATMEGA168V.
     Unplug and disassemble the clock.  Remove the side PCB with VFD tube.
-    Make sure that the AVR programmer will not provide power to the
-    clock.  (For the Adafruit USBtinyISP, this means ensuring that the
+    Make sure that the AVR programmer will not provide power to the clock.
+    (For the Adafruit USBtinyISP, this means ensuring that the
     power jumper is not installed.)  Connect the AVR programmer to the
     clock's ISP header, ensuring that pin one on the cable and the marked
     pin on the clock's ISP header match.  Finally, power the clock board
@@ -124,15 +127,15 @@ the included Makefile:
 (4) Install the Firmware
 
     Install this firmware to an ATMEGA328P by setting the fuse bits,
-    writing the flash program, writing the EEPROM data, and setting
-    the lock bits:
+    writing the flash program, writing the EEPROM data, and setting the
+    lock bits:
 
         % make install-all
 
     Alternatively, this firmware may be installed or upgraded in separate
-    steps.  If a programmer wishes not to set lockbits or not to overwrite
-    the EEPROM (clock settings), simply skip the corresponding commands.
-    The following commands are equivalent to "make install-all":
+    steps.  If a you wish not to set lockbits or not to overwrite the
+    EEPROM (clock settings), simply skip those commands below.  The
+    following commands are equivalent to "make install-all":
 
         % make install-fuse
         % make install-flash
@@ -141,9 +144,9 @@ the included Makefile:
 
 (5) Verify Successful Programming (Optional)
 
-    To ensure that the chip has been successfully programmed, one
-    may check the chip data against what should have been installed
-    in the previous step:
+    To ensure that the chip has been successfully programmed, one may
+    check the chip data against what should have been installed in the
+    previous step:
 
         % make verify-all
 
@@ -250,8 +253,8 @@ R3 with a jumper:
 
   http://forums.adafruit.com/viewtopic.php?p=179107#p179107
 
-In addition to replacing R3 with a jumper, I also recommend replacing Q3
-with a better MOSFET, such as a ZVP2110A.
+In addition to replacing R3 with a jumper, I also recommend replacing
+Q3 with a better MOSFET, such as a ZVP2110A.
 
 
 :: Nonfunctional Drift Correction ::
@@ -274,12 +277,12 @@ correction method is quite robust:
 
 
 :: Unstable Crystal Oscillator ::
-http://www.ladyada.net/make/icetube/mods.html
-Oscillator caps C8 and C9 are a bit large.  Usually this only means
-that the clock consistently runs slow, losing a few seconds each day.
-When the time is periodically corrected, the automatic drift
-correction detects that the clock is running slow and compensates
-timekeeping accordingly.
+
+In the Adafruit kit, oscillator caps C8 and C9 are a bit large.
+Usually this only means that the clock consistently runs slow, losing
+a few seconds each day.  When the time is periodically corrected, the
+automatic drift correction detects that the clock is running slow and
+compensates timekeeping accordingly.
 
 Much less commonly, the quartz oscillator will not function--or much
 worse--operate intermittently.  Faulty operation causes time loss
